--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "gulp-postcss": "9.0.1",
     "gulp-rename": "2.0.0",
     "gulp-sass": "5.1.0",
-    "gulp-svgstore": "9.0.0",
-    "gulp-webp": "4.0.1",
+    "gulp-svgstore": "^9.0.0",
+    "gulp-webp": "^4.0.1",
     "postcss": "8.4.14",
     "sass": "1.53.0",
     "stylelint": "13.13.1",
